// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-urls should get URLs for a child document 1`] = `
[
  {
    "id": "00000000-0000-0000-0000-000000000000",
    "urlInfos": [
      {
        "culture": "en-US",
        "url": "/_test-getdocumenturls-child/",
      },
    ],
  },
]
`;

exports[`get-document-urls should get URLs for a valid document 1`] = `
[
  {
    "id": "00000000-0000-0000-0000-000000000000",
    "urlInfos": [
      {
        "culture": "en-US",
        "url": "/_test-getdocumenturls/",
      },
    ],
  },
]
`;

exports[`get-document-urls should handle non-existent document id 1`] = `[]`;
